<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_label">Clock</string>
    <string name="default_label">Alarm</string>
    <string name="label_default">Default</string>
    <string name="label_off">Off</string>
    <string name="label_never">Never</string>
    <string name="label_none">None</string>
    <string name="label_cities">Cities</string>
    <string name="label_indefinitely">Indefinitely</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="label_new_image">New image</string>
    <string name="label_new_font">New font</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="do_not_show_again">Don\'t show again</string>
    <string name="label_days">Days</string>
    <string name="label_hours">Hours</string>
    <string name="label_minutes">Minutes</string>
    <string name="label_seconds">Seconds</string>
    <string name="hours_minutes_seconds"><xliff:g example="2" id="hours">%1$d</xliff:g>:<xliff:g example="3" id="minutes">%2$02d</xliff:g>:<xliff:g example="44" id="seconds">%3$02d</xliff:g></string>
    <string name="minutes_seconds"><xliff:g example="3" id="minutes">%1$d</xliff:g>:<xliff:g example="44" id="seconds">%2$02d</xliff:g></string>
    <string name="seconds_only" translatable="false"><xliff:g example="44" id="seconds">%1$02d</xliff:g></string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="confirm_action_prompt">\n\nDo you want to continue?</string>
    <string name="add_label">Add label</string>
    <string name="label_description">Label</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="timer_button_time_minutes_warning_box_text">Enter a value from 0 to 60 minutes</string>
    <string name="timer_button_time_seconds_warning_box_text">Enter a value from 0 to 59 seconds</string>
    <string name="timer_time_warning_box_title">Incorrect value entered</string>
    <string name="no_label_specified">No label specified</string>
    <string name="no_alarms">No Alarms</string>
    <string name="button_alarms">Add alarm</string>
    <string name="schedule_alarm_title">Schedule alarm</string>
    <string name="pause_alarm_title">Pause alarm</string>
    <string name="pause_alarm_range">Paused: %1$s</string>
    <string name="pause_alarm_info_message">Select days of the week to access this feature.</string>
    <string name="timezone_title">Time zone</string>
    <string name="exclude_dates_title">Exclude dates</string>
    <string name="select_dates_title">Select dates</string>
    <string name="exclude_dates_confirm">Exclude</string>
    <string name="select_dates_confirm">Select</string>
    <string name="no_dates_excluded">Unscheduled</string>
    <string name="dates_excluded_count">%d date(s) excluded</string>
    <string name="no_dates_selected">Unscheduled</string>
    <string name="dates_selected_count">%d date(s) selected</string>
    <string name="combined_days_info_message">When days of the week are selected, you can exclude specific dates (e.g., holidays). When no days are selected, you can choose specific dates for the alarm to ring.</string>
    <string name="prev_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="prev_year">Previous year</string>
    <string name="next_year">Next year</string>
    <string name="cleanup_overrides">Clean up overrides</string>
    <string name="select_year">Select year</string>
    <string name="jump_to_current_month">Jump to current month</string>
    <string name="clear_all_description">Clear all overrides</string>
    <string name="dates_overridden_count">%1$d date(s) excluded, %2$d added</string>
    <string name="dates_excluded_only_count">%d date(s) excluded</string>
    <string name="dates_added_only_count">%d date(s) added</string>
    <string name="dates_summary_added">+%d</string>
    <string name="dates_summary_excluded">-%d</string>
    <string name="dates_summary_added_excluded">+%1$d, -%2$d</string>
    <string name="date_action_description">Manage a specific date</string>
    <string name="date_action_title">What to do with %1$s?</string>
    <string name="date_action_go_to">Go to</string>
    <string name="date_action_add">Add</string>
    <string name="date_action_remove">Remove</string>
    <string name="date_action_toggle">Toggle</string>
    <string name="date_action_state_on">Alarm is On</string>
    <string name="date_action_state_off">Alarm is Off</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="alarm_today">Today</string>
    <string name="alarm_scheduled_for">Scheduled for %s</string>
    <string name="alarm_alert_off_text">Alarm off</string>
    <string name="alarm_alert_off_and_deleted_text">Alarm off and deleted</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_dismiss_and_delete_text">Dismiss &amp; Delete</string>
    <string name="alarm_alert_dismiss_and_delete_text_button">Dismiss &amp;\nDelete</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%1$s</xliff:g> - <xliff:g id="alarm_label">%2$s</xliff:g></string>
    <string name="alarm_alert_snoozed_text">Snoozed</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_duration_message">Snoozing for <xliff:g example="1 h 30 m" id="duration">%s</xliff:g></string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_flash">Flash</string>
    <string name="label_lock">Lock</string>
    <string name="label_unlock">Unlock</string>
    <string name="delete_occasional_alarm_after_use_title">Delete alarm once last date dismissed</string>
    <string name="delete_occasional_alarm_after_use_info_message">Deselect the days of the week to access this feature.</string>
    <string name="timer_sound">Timer sound</string>
    <string name="default_alarm_ringtone_title">Default alarm sound</string>
    <string name="style_category_title">Style</string>
    <string name="miscellaneous_category_title">Miscellaneous</string>
    <string name="custom_font_title">Select a custom font</string>
    <string name="ringtone_category_title">Ringtone</string>
    <string name="vibration_category_title">Vibration</string>
    <string name="actions_category_title">Actions</string>
    <string name="display_settings_title">Display settings</string>
    <string name="crescendo_duration_title">Gradually increase volume</string>
    <string name="auto_silence_title">Silence after</string>
    <string name="shake_intensity_title">Shake intensity</string>
    <string name="vibration_pattern_title">Vibration pattern</string>
    <string name="enable_per_alarm_snooze_duration_title">Use a custom snooze duration for each alarm</string>
    <string name="snooze_duration_title">Snooze length</string>
    <string name="enable_per_alarm_volume_title">Use a custom volume for each alarm</string>
    <string name="enable_per_alarm_crescendo_duration_title">Use a custom volume increase duration for each alarm</string>
    <string name="enable_per_alarm_auto_silence_title">Use a custom stop duration for each alarm</string>
    <string name="display_dismiss_button_title">Always show dismiss button</string>
    <string name="display_dismiss_button_summary">If disabled, the button only appears shortly before the alarm fires (at the same time as the notification reminder)</string>
    <string name="enable_per_alarm_missed_repeat_limit_title">Use a custom missed alarm repeat count for each alarm</string>
    <string name="missed_alarm_repeat_limit_title">Repeat missed alarms</string>
    <string name="alarm_notification_reminder_title">Notification reminder</string>
    <string name="advanced_audio_playback_title">Use advanced audio playback</string>
    <string name="advanced_audio_playback_summary">Improves external audio device compatibility and prevents sound interruptions during repetition
        \n\nNote: Some ringtones may have slight audio glitches</string>
    <string name="auto_routing_to_external_audio_device_title">Enable automatic routing of ringtones to external audio devices</string>
    <string name="system_media_volume_title">Use system media volume</string>
    <string name="system_media_volume_summary">Only works if an external audio device is connected</string>
    <string name="external_audio_device_volume_title">Alarm volume for external audio devices</string>
    <string name="enable_alarm_vibrations_by_default_setting_title">Enable vibrations when alarm is triggered</string>
    <string name="enable_per_alarm_vibration_pattern_title">Use a custom vibration pattern for each alarm</string>
    <string name="vibration_start_delay_title">Delay before vibration starts</string>
    <string name="enable_snoozed_or_dismissed_alarm_vibrations_title">Enable vibrations when alarm is snoozed or dismissed</string>
    <string name="enable_snoozed_or_dismissed_alarm_vibrations_summary">Double vibration when alarm is snoozed and single vibration when alarm is dismissed</string>
    <string name="turn_on_back_flash_for_triggered_alarm_title">Turn on back flash when alarm is triggered</string>
    <string name="enable_delete_occasional_alarm_by_default_setting_title">Enable automatic deletion of occasional alarms by default</string>
    <string name="material_time_picker_style_title">Time picker style</string>
    <string name="date_picker_style_title">Date picker style</string>
    <string name="sort_alarm_title">Sort the alarms</string>
    <string name="display_enabled_alarms_first_title">Display the enabled alarms first</string>
    <string name="enable_alarm_fab_long_press_title">Enable a long press on the action button to create alarms with delay</string>
    <string name="enable_alarm_fab_long_press_summary">If disabled, two buttons will be displayed to create alarms</string>
    <string name="alarm_settings_general_summary">This setting can be changed for each alarm in the alarm editing panel</string>
    <string name="week_start_title">Start week on</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="volume_button_setting_title">Volume buttons</string>
    <string name="power_button_title">Power button</string>
    <string name="flip_action_title">Device flip action</string>
    <string name="shake_action_title">Device shake action</string>
    <string name="timer_creation_view_style_title">Timer creation view style</string>
    <string name="timer_vibrate_title">Timer vibrate</string>
    <string name="timer_volume_buttons_action_title">Reset the expired timers with the volume buttons</string>
    <string name="timer_power_button_action_title">Reset the expired timers with the power button</string>
    <string name="timer_buttons_action_summary">Only works on the lock screen</string>
    <string name="timer_flip_action_title">Flip the device to stop the alarm</string>
    <string name="timer_shake_action_title">Shake the device to stop the alarm</string>
    <string name="sort_timer_title">Sort the timers</string>
    <string name="default_time_to_add_to_timer_title">Default time to add to the timers</string>
    <string name="analog_widget">Analog clock</string>
    <string name="digital_widget">Digital clock</string>
    <string name="vertical_widget">Vertical clock</string>
    <string name="next_alarm_widget">Next alarm</string>
</resources>