<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-License-Identifier: GPL-3.0-only
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:title="@string/style_category_title"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false">

        <Preference
            android:key="key_alarm_display_customization"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/display_settings_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="key_alarm_font"
            android:layout="@layout/settings_preference_layout"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            tools:title="@string/custom_font_title" />

        <ListPreference
            android:key="key_material_time_picker_style"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/material_time_picker_style_title"
            android:entries="@array/time_picker_style_entries"
            android:entryValues="@array/time_picker_style_values"
            android:defaultValue="analog"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:key="key_material_date_picker_style"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/date_picker_style_title"
            android:entries="@array/date_picker_style_entries"
            android:entryValues="@array/date_picker_style_values"
            android:defaultValue="calendar"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ringtone_category_title"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false">

        <Preference
            android:key="key_default_alarm_ringtone"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/default_alarm_ringtone_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <com.best.deskclock.settings.custompreference.AutoSilenceDurationPreference
            android:key="key_auto_silence_duration"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/auto_silence_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_per_alarm_auto_silence"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_per_alarm_auto_silence_title"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <com.best.deskclock.settings.custompreference.AlarmSnoozeDurationPreference
            android:key="key_alarm_snooze_duration"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/snooze_duration_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_per_alarm_snooze_duration"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_per_alarm_snooze_duration_title"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:key="key_repeat_missed_alarm"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/missed_alarm_repeat_limit_title"
            android:entries="@array/missed_alarm_repeat_limit_entries"
            android:entryValues="@array/missed_alarm_repeat_limit_values"
            android:defaultValue="-1"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_per_alarm_missed_repeat_limit"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_per_alarm_missed_repeat_limit_title"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <com.best.deskclock.settings.custompreference.AlarmVolumePreference
            android:key="key_volume_setting"
            android:layout="@layout/settings_preference_slider_layout"
            android:title="@string/alarm_volume_title"
            android:summary="0"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_per_alarm_volume"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_per_alarm_volume_title"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <com.best.deskclock.settings.custompreference.VolumeCrescendoDurationPreference
            android:key="key_alarm_volume_crescendo_duration"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/crescendo_duration_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_per_alarm_volume_crescendo_duration"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_per_alarm_crescendo_duration_title"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_advanced_audio_playback"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/advanced_audio_playback_title"
            android:summary="@string/advanced_audio_playback_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_auto_routing_to_external_audio_device"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/auto_routing_to_external_audio_device_title"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_system_media_volume"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/system_media_volume_title"
            android:summary="@string/system_media_volume_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <com.best.deskclock.settings.custompreference.CustomSliderPreference
            android:key="key_external_audio_device_volume"
            android:layout="@layout/settings_preference_slider_layout"
            android:title="@string/external_audio_device_volume_title"
            android:summary="@string/label_default"
            android:defaultValue="70"
            android:max="100"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="key_alarm_vibration_category"
        android:title="@string/vibration_category_title"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="key_enable_alarm_vibrations_by_default"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_alarm_vibrations_by_default_setting_title"
            android:summary="@string/alarm_settings_general_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <com.best.deskclock.settings.custompreference.VibrationPatternPreference
            android:key="key_vibration_pattern"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/vibration_pattern_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_per_alarm_vibration_pattern"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_per_alarm_vibration_pattern_title"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <com.best.deskclock.settings.custompreference.VibrationStartDelayPreference
            android:key="key_vibration_start_delay"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/vibration_start_delay_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_snoozed_or_dismissed_alarm_vibrations"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_snoozed_or_dismissed_alarm_vibrations_title"
            android:summary="@string/enable_snoozed_or_dismissed_alarm_vibrations_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/actions_category_title"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="key_volume_button_setting"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/volume_button_setting_title"
            android:entries="@array/volume_button_setting_entries"
            android:entryValues="@array/volume_button_setting_values"
            android:defaultValue="-1"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:key="key_power_button"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/power_button_title"
            android:entries="@array/action_setting_entries"
            android:entryValues="@array/side_button_setting_values"
            android:defaultValue="0"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:key="key_flip_action"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/flip_action_title"
            android:entries="@array/action_setting_entries"
            android:entryValues="@array/side_button_setting_values"
            android:defaultValue="0"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:key="key_shake_action"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/shake_action_title"
            android:entries="@array/action_setting_entries"
            android:entryValues="@array/side_button_setting_values"
            android:defaultValue="0"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <com.best.deskclock.settings.custompreference.CustomSliderPreference
            android:key="key_shake_intensity"
            android:layout="@layout/settings_preference_slider_layout"
            android:title="@string/shake_intensity_title"
            android:summary="@string/label_default"
            android:defaultValue="16"
            android:max="55"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/miscellaneous_category_title"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="key_sort_alarm"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/sort_alarm_title"
            android:entries="@array/sort_alarm_entries"
            android:entryValues="@array/sort_alarm_values"
            android:defaultValue="0"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_display_enabled_alarms_first"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/display_enabled_alarms_first_title"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_alarm_fab_long_press"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_alarm_fab_long_press_title"
            android:summary="@string/enable_alarm_fab_long_press_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:key="key_week_start"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/week_start_title"
            android:entries="@array/week_start_entries"
            android:entryValues="@array/week_start_values"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_display_dismiss_button"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/display_dismiss_button_title"
            android:summary="@string/display_dismiss_button_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:key="key_alarm_notification_reminder_time"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/alarm_notification_reminder_title"
            android:entries="@array/alarm_notification_reminder_entries"
            android:entryValues="@array/alarm_notification_reminder_values"
            android:defaultValue="30"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_turn_on_back_flash_for_triggered_alarm"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/turn_on_back_flash_for_triggered_alarm_title"
            android:summary="@string/alarm_settings_general_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:key="key_enable_delete_occasional_alarm_by_default"
            android:layout="@layout/settings_preference_layout"
            android:title="@string/enable_delete_occasional_alarm_by_default_setting_title"
            android:summary="@string/alarm_settings_general_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

</PreferenceScreen>
